WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25746
After 10.5.7 update and latest Safari 4 public beta release, nightly build crashes on launch on PPC machines.
https://bugs.webkit.org/show_bug.cgi?id=25746
Summary
After 10.5.7 update and latest Safari 4 public beta release, nightly build cr...
Trevor Downs
Reported
2009-05-13 00:19:36 PDT
Today I installed 10.5.7 and the latest Safari 4 public beta on my PowerBook G4. Afterwards, I got a crash every time I tried to open the webkit nightly build. Safari 4 is working fine itself. Attached is the crash log.
Attachments
Safari crash log 2009-05-12
(27.67 KB, text/plain)
2009-05-13 00:21 PDT
,
Trevor Downs
no flags
Details
Safari crash log, 2 of 3
(28.18 KB, application/octet-stream)
2009-05-13 00:22 PDT
,
Trevor Downs
no flags
Details
Safari crash log, 3 of 3
(27.89 KB, application/octet-stream)
2009-05-13 00:22 PDT
,
Trevor Downs
no flags
Details
revert of r43507
(50.21 KB, patch)
2009-05-13 14:23 PDT
,
Dmitry Titov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Trevor Downs
Comment 1
2009-05-13 00:21:57 PDT
Created
attachment 30264
[details]
Safari crash log 2009-05-12
Trevor Downs
Comment 2
2009-05-13 00:22:34 PDT
Created
attachment 30265
[details]
Safari crash log, 2 of 3
Trevor Downs
Comment 3
2009-05-13 00:22:53 PDT
Created
attachment 30266
[details]
Safari crash log, 3 of 3
Alexey Proskuryakov
Comment 4
2009-05-13 02:28:32 PDT
I'm also seeing this on my PPC machine.
Alexey Proskuryakov
Comment 5
2009-05-13 04:32:52 PDT
This happens because WTF::createThread() now returns a struct instead of an integral value.
Mark Rowe (bdash)
Comment 6
2009-05-13 12:54:28 PDT
Unless there's an obvious fix for this I'm going to roll out the threading changes once more.
Dmitry Titov
Comment 7
2009-05-13 14:04:15 PDT
Discussed offline. No obvious fix, I am preparing revert patch.
Dmitry Titov
Comment 8
2009-05-13 14:23:13 PDT
Created
attachment 30287
[details]
revert of
r43507
This is caused by
http://trac.webkit.org/changeset/43507
. The patch is a result of 'git revert' and a few merges resolved due to recent changes.
Dmitry Titov
Comment 9
2009-05-13 15:13:05 PDT
rubber-stamped by Mark Rowe and landed:
http://trac.webkit.org/changeset/43663
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug