WebCore/loader/icon/IconDatabase.cpp
@@ -135,10 +135,11 @@ bool IconDatabase::open(const String& databasePath)
     // completes and m_syncThreadRunning is properly set
     m_syncLock.lock();
     m_syncThread = createThread(IconDatabase::iconDatabaseSyncThreadStart, this, "WebCore: IconDatabase");
-    m_syncThreadRunning = m_syncThread.isValid();
+    m_syncThreadRunning = m_syncThread;
     m_syncLock.unlock();
-
-    return m_syncThreadRunning;
+    if (!m_syncThread)
+        return false;
+    return true;
 }
 
 void IconDatabase::close()
