WebCore/storage/LocalStorageThread.cpp
@@ -38,6 +38,7 @@ PassRefPtr<LocalStorageThread> LocalStorageThread::create()
 }
 
 LocalStorageThread::LocalStorageThread()
+    : m_threadID(0)
 {
     m_selfRef = this;
 }
@@ -46,10 +47,12 @@ bool LocalStorageThread::start()
 {
     MutexLocker lock(m_threadCreationMutex);
 
-    if (!m_threadID.isValid())
-        m_threadID = createThread(LocalStorageThread::localStorageThreadStart, this, "WebCore: LocalStorage");
+    if (m_threadID)
+        return true;
 
-    return m_threadID.isValid();
+    m_threadID = createThread(LocalStorageThread::localStorageThreadStart, this, "WebCore: LocalStorage");
+
+    return m_threadID;
 }
 
 void* LocalStorageThread::localStorageThreadStart(void* thread)
@@ -74,7 +77,7 @@ void* LocalStorageThread::localStorageThread()
 
     // Detach the thread so its resources are no longer of any concern to anyone else
     detachThread(m_threadID);
-    m_threadID.invalidate();
+    m_threadID = 0;
 
     // Clear the self refptr, possibly resulting in deletion
     m_selfRef = 0;
@@ -84,25 +87,25 @@ void* LocalStorageThread::localStorageThread()
 
 void LocalStorageThread::scheduleImport(PassRefPtr<LocalStorage> storage)
 {
-    ASSERT(!m_queue.killed() && m_threadID.isValid());
+    ASSERT(!m_queue.killed() && m_threadID);
     m_queue.append(LocalStorageTask::createImport(storage));
 }
 
 void LocalStorageThread::scheduleSync(PassRefPtr<LocalStorage> storage)
 {
-    ASSERT(!m_queue.killed() && m_threadID.isValid());
+    ASSERT(!m_queue.killed() && m_threadID);
     m_queue.append(LocalStorageTask::createSync(storage));
 }
 
 void LocalStorageThread::scheduleImport(PassRefPtr<LocalStorageArea> area)
 {
-    ASSERT(!m_queue.killed() && m_threadID.isValid());
+    ASSERT(!m_queue.killed() && m_threadID);
     m_queue.append(LocalStorageTask::createImport(area));
 }
 
 void LocalStorageThread::scheduleSync(PassRefPtr<LocalStorageArea> area)
 {
-    ASSERT(!m_queue.killed() && m_threadID.isValid());
+    ASSERT(!m_queue.killed() && m_threadID);
     m_queue.append(LocalStorageTask::createSync(area));
 }
 
@@ -112,8 +115,8 @@ void LocalStorageThread::terminate()
     
     // Ideally we'd never be killing a thread that wasn't live, so ASSERT it.
     // But if we do in a release build, make sure to not wait on a condition that will never get signalled
-    ASSERT(!m_queue.killed() && m_threadID.isValid());
-    if (!m_threadID.isValid())
+    ASSERT(!m_queue.killed() && m_threadID);
+    if (!m_threadID)
         return;
 
     MutexLocker locker(m_terminateLock);
